Istio/jvks/jwks-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: jwks-se
  namespace: namespace-name
  labels:
    app: egress-name
    istio: egress-name
spec:
  selector:
    app: egress-name
    istio: egress-name
  servers:
    - hosts:
        - jwks.com.ru
      port:
        name: tcp-14000
        number: 14000
        protocol: TCP
