Istio/jvks/jwks-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: jwks-dr
  namespace: namespace-name
  labels:
    app: egress-name
    istio: egress-name
spec:
  exportTo:
    - .
  host: jwks.com.ru
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      caCertificates: /path/to/certs/chain.pem
      clientCertificate: /path/to/cert/server.pem
      privateKey: /path/to/cert/server.key.pem
      mode: MUTUAL
      sni: jwks.com.ru
  workloadSelector:
    matchLabels:
      app: egress-name
      istio: egress-name
